--- a/src/app/wheel/wheel.html
+++ b/src/app/wheel/wheel.html
@@ -1,10 +1,11 @@
-<p>Wheel Ig</p>
-<body>
-  <canvas
-    id="myCanvas"
-    width="400"
-    height="400"
-    style="border: 1px solid #000000"
-  ></canvas>
-  <script src="wheel.ts"></script>
-</body>
+<p class="hello">Wheel Ig</p>
+<button (click)="spin()">clickme</button>
+<!-- <body> -->
+<canvas
+  id="myCanvas"
+  width="600"
+  height="600"
+  style="border: 1px solid #fffdfd"
+></canvas>
+<!-- <script src="wheel.ts"></script> -->
+<!-- </body> -->
