--- a/src/app/wheel/wheel.html
+++ b/src/app/wheel/wheel.html
@@ -19,8 +19,9 @@
       id="myCanvas"
       width="600"
       height="600"
-      style="border: 1px solid #333"
+      style="border: 1px solid #016064"
       >Section 2
+      <div class="triangle"></div>
     </canvas>
     <div></div>
 
